cargo-features = ["edition"]

[package]
name = "erlust"
edition = "2018"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT"
categories = ["asynchronous", "concurrency", "rust-patterns"]
keywords = ["actor", "erlang", "async", "serialization", "futures",
    "concurrency", "message-passing", "distributed-systems"]
description = "Erlang-like actor system for Rust"

[dependencies]
erased-serde = "0.3"
failure = "0.1"
lazy_static = "1.1"
serde = "1.0"

[dependencies.futures-preview]
git = "https://github.com/rust-lang-nursery/futures-rs"
rev = "c02ec75a155485ff4b50f21205b6a462851b08e1"

[dev-dependencies]
serde_derive = "1.0"
