[package]
name = "erlust"
edition = "2018"
version = "0.1.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
license = "MIT"
categories = ["asynchronous", "concurrency", "rust-patterns"]
keywords = ["actor", "erlang", "async", "serialization", "futures",
    "concurrency", "message-passing", "distributed-systems"]
description = "Erlang-like actor system for Rust"

[dependencies]
erased-serde = "0.3"
failure = "0.1"
lazy_static = "1.1"
serde = "1.0"
serde_derive = "1.0"

[dependencies.futures-preview]
git = "https://github.com/rust-lang-nursery/futures-rs"
rev = "d040a57521ca09d7eb162840bfb084d90d72db03"
